# chant-omr

./: .gitignore  PLAN.md  README.md  TRAINING-PLAN.md  pyproject.toml
benchmarks/: README.md
chant_omr/: __init__.py  cli.py  hub.py
chant_omr/data/: __init__.py  augmentation.py  dataset.py  gabc_parser.py  gregobase.py  nabc.py  renderer.py  token_audit.py
chant_omr/evaluation/: evaluate.py  gregorio_roundtrip.py  metrics.py
chant_omr/inference/: __init__.py  beam_search.py  checkpoint.py  export.py  gabc_output.py  grammar.py  metrics.py  onnx_decode.py  ov_decode.py  predict.py  preprocess.py
chant_omr/model/: __init__.py  chant_omr_model.py  decoder.py  encoder.py  tokenizer.py
chant_omr/training/: __init__.py  lightning_module.py  scheduled_sampling.py  xpu_strategy.py
configs/: default.yaml  overfit.yaml
docs/: DEPENDENCIES.md  index.html  index.xml  sitemap.xml
docs/adr/: 0001-record-architecture-decisions.md  0002-variable-height-patch-grid.md  (+13 more)
scripts/: download_gregobase.py  evaluate.py  export_openvino.py  generate_showcase_images.py  render_dataset.py  train.py  train_tokenizer.py
tests/: conftest.py  test_augmentation.py  test_dataset.py  test_decoder.py  test_encoder.py  test_evaluate.py  test_export.py  test_gabc_parser.py  test_grammar.py  test_gregobase.py  test_hub.py  test_lightning.py  test_model.py  test_nabc.py  test_normalization.py  test_onnx_decode.py  test_predict.py  test_preprocess.py  test_renderer.py  test_scheduled_sampling.py  test_token_audit.py  test_tokenizer.py  test_training_device.py
website/: hugo.toml
(+27 files in other folders)
